// Copyright 2023 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package types;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "teleport/legacy/types/types.proto";

option go_package = "github.com/gravitational/teleport/api/types";
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

// DeviceV1 is the resource representation of teleport.devicetrust.v1.Device.
message DeviceV1 {
  // Header is the common resource header.
  //
  // - Kind is always "device".
  // - SubKind is unused.
  // - Version is equivalent to teleport.devicetrust.v1.Device.api_version.
  // - Metadata.Name is equivalent to teleport.devicetrust.v1.Device.Id.
  ResourceHeader Header = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "",
    (gogoproto.embed) = true
  ];
  // Specification of the device.
  DeviceSpec spec = 5 [(gogoproto.jsontag) = "spec"];
}

// DeviceSpec is a device specification.
// Roughly matches teleport.devicetrust.v1.Device, with some fields changed for
// better UX.
message DeviceSpec {
  string os_type = 1 [(gogoproto.jsontag) = "os_type"];
  string asset_tag = 2 [(gogoproto.jsontag) = "asset_tag"];
  google.protobuf.Timestamp create_time = 3 [
    (gogoproto.stdtime) = true,
    (gogoproto.jsontag) = "create_time"
  ];
  google.protobuf.Timestamp update_time = 4 [
    (gogoproto.stdtime) = true,
    (gogoproto.jsontag) = "update_time"
  ];
  string enroll_status = 5 [(gogoproto.jsontag) = "enroll_status"];
  DeviceCredential credential = 6 [(gogoproto.jsontag) = "credential,omitempty"];
  repeated DeviceCollectedData collected_data = 7 [(gogoproto.jsontag) = "collected_data,omitempty"];
  DeviceSource source = 8 [(gogoproto.jsontag) = "source,omitempty"];
  DeviceProfile profile = 9 [(gogoproto.jsontag) = "profile,omitempty"];
  string owner = 10 [(gogoproto.jsontag) = "owner,omitempty"];
}

// DeviceCredential is the resource representation of
// teleport.devicetrust.v1.DeviceCredential.
message DeviceCredential {
  string id = 1 [(gogoproto.jsontag) = "id"];
  bytes public_key_der = 2 [(gogoproto.jsontag) = "public_key_der,omitempty"];
  string device_attestation_type = 3 [(gogoproto.jsontag) = "device_attestation_type,omitempty"];
  string tpm_ekcert_serial = 4 [(gogoproto.jsontag) = "tpm_ekcert_serial,omitempty"];
  bytes tpm_ak_public = 5 [(gogoproto.jsontag) = "tpm_ak_public,omitempty"];
}

// DeviceCollectedData is the resource representation of
// teleport.devicetrust.v1.DeviceCollectedData.
message DeviceCollectedData {
  google.protobuf.Timestamp collect_time = 1 [
    (gogoproto.stdtime) = true,
    (gogoproto.jsontag) = "collect_time"
  ];
  google.protobuf.Timestamp record_time = 2 [
    (gogoproto.stdtime) = true,
    (gogoproto.jsontag) = "record_time"
  ];
  string os_type = 3 [(gogoproto.jsontag) = "os_type"];
  string serial_number = 4 [(gogoproto.jsontag) = "serial_number,omitempty"];
  string model_identifier = 5 [(gogoproto.jsontag) = "model_identifier,omitempty"];
  string os_version = 6 [(gogoproto.jsontag) = "os_version,omitempty"];
  string os_build = 7 [(gogoproto.jsontag) = "os_build,omitempty"];
  string os_username = 8 [(gogoproto.jsontag) = "os_username,omitempty"];
  string jamf_binary_version = 9 [(gogoproto.jsontag) = "jamf_binary_version,omitempty"];
  string macos_enrollment_profiles = 10 [(gogoproto.jsontag) = "macos_enrollment_profiles,omitempty"];
  string reported_asset_tag = 11 [(gogoproto.jsontag) = "reported_asset_tag,omitempty"];
  string system_serial_number = 12 [(gogoproto.jsontag) = "system_serial_number,omitempty"];
  string base_board_serial_number = 13 [(gogoproto.jsontag) = "base_board_serial_number,omitempty"];
  TPMPlatformAttestation tpm_platform_attestation = 14 [(gogoproto.jsontag) = "tpm_platform_attestation,omitempty"];
  string os_id = 15 [(gogoproto.jsontag) = "os_id,omitempty"];
}

// TPMPCR is the resource representation of teleport.devicetrust.v1.TPMPCR.
message TPMPCR {
  int32 index = 1 [(gogoproto.jsontag) = "index"];
  bytes digest = 2 [(gogoproto.jsontag) = "digest"];
  uint64 digest_alg = 3 [(gogoproto.jsontag) = "digest_alg"];
}

// TPMQuote is the resource representation of teleport.devicetrust.v1.TPMQuote.
message TPMQuote {
  bytes quote = 1 [(gogoproto.jsontag) = "quote"];
  bytes signature = 2 [(gogoproto.jsontag) = "signature"];
}

// TPMPlatformParameters is the resource representation of
// teleport.devicetrust.v1.TPMPlatformParameters.
message TPMPlatformParameters {
  repeated TPMQuote quotes = 1 [(gogoproto.jsontag) = "quotes"];
  repeated TPMPCR pcrs = 2 [(gogoproto.jsontag) = "pcrs"];
  bytes event_log = 3 [(gogoproto.jsontag) = "event_log"];
}

// TPMPlatformAttestation is the resource representation of
// teleport.devicetrust.v1.TPMPlatformAttestation.
message TPMPlatformAttestation {
  bytes nonce = 1 [(gogoproto.jsontag) = "nonce,omitempty"];
  TPMPlatformParameters platform_parameters = 2 [(gogoproto.jsontag) = "platform_parameters,omitempty"];
}

// DeviceSource is the resource representation of
// teleport.devicetrust.v1.DeviceSource..
message DeviceSource {
  string name = 1 [(gogoproto.jsontag) = "name"];
  string origin = 2 [(gogoproto.jsontag) = "origin"];
}

// DeviceProfile is the resource representation of
// teleport.devicetrust.v1.DeviceProfile.
message DeviceProfile {
  google.protobuf.Timestamp update_time = 1 [
    (gogoproto.stdtime) = true,
    (gogoproto.jsontag) = "update_time,omitempty"
  ];
  string model_identifier = 2 [(gogoproto.jsontag) = "model_identifier,omitempty"];
  string os_version = 3 [(gogoproto.jsontag) = "os_version,omitempty"];
  string os_build = 4 [(gogoproto.jsontag) = "os_build,omitempty"];
  repeated string os_usernames = 5 [(gogoproto.jsontag) = "os_usernames,omitempty"];
  string jamf_binary_version = 6 [(gogoproto.jsontag) = "jamf_binary_version,omitempty"];
  string external_id = 7 [(gogoproto.jsontag) = "external_id,omitempty"];
  string os_build_supplemental = 8 [(gogoproto.jsontag) = "os_build_supplemental,omitempty"];
  string os_id = 9 [(gogoproto.jsontag) = "os_id,omitempty"];
}
